# personal-firewall

./: .gitlab-ci.yml  CMakeLists.txt  COMPILING.md  DICTIONARY.md  PRINCIPLE.md  README.md  main.cc
daemon/: CMakeLists.txt  dissect-packet.cc  dissect-packet.hh  main.cc  netfilter-callback.cc  netfilter-callback.hh  netfilter-queue-library.hh  packet.cc  packet.hh  packetqueue.hh  personal-firewall.hh  queue.hh  rule.cc  rule.hh  rulerepository.cc  rulerepository.hh  verdict.cc  verdict.hh
daemon/systemd/: personal-firewalld.service.in
daemon/unittests/: CMakeLists.txt  test_main.cc  test_rule.cc  test_rulerepository.cc  test_verdict.cc
daemon/unittests/invalid-rules/: invalidkey  invalidtree  invalidverdict
daemon/unittests/rules/: 01_accept_from_b  02_reject_from_a
